feat: create ibadahAssigment, provide calendar data
